unpackaged/main/default/objects/Article_Search__c/Article_Search__c.object-meta.xml
<CustomObject>
    <description>Analytics log of help-center searches. One row per submitted search (Search_Type__c Full/Fallback/Fuzzy) or, from Phase 3, per typeahead. Zero-result rows (Result_Count__c = 0) are the first gap report; rows with a top result but no Clicked_Article_Id__c are the searched-but-never-clicked report. logClick updates the row in place when the user opens a result, so rows are no longer strictly append-only. Who/when = CreatedById/CreatedDate.</description>
    <label>Article Search</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Article Search Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Searches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>