unpackaged/main/default/objects/Article_Search__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <description>Which app surface fired the search. Surface__c only records the network (&#39;Internal&#39; or the Experience site), and the Help Center and Resource Center share one site — this field is the app-level discriminator so analytics can tell them apart. Set by the client logger; no default on purpose so legacy rows stay visibly untagged.</description>
    <label>App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Help Center</fullName>
            </value>
            <value>
                <fullName>Resource Center</fullName>
            </value>
            <value>
                <fullName>Landing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>