unpackaged/main/default/objects/Article_Search__c/fields/Clicked_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Article_Id__c</fullName>
    <description>Knowledge__ka Id (version-stable) of the result the user opened from this search, written by logClick. Blank = searched-but-never-clicked (the second gap report). Text, not a lookup, for the same republish-stability reason as Top_Result_Article_Id__c.</description>
    <label>Clicked Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>