unpackaged/main/default/objects/Article_Search__c/fields/Clicked_Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Article_Title__c</fullName>
    <description>Title snapshot of the clicked result at click time, denormalized server-side by logClick.</description>
    <label>Clicked Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>