unpackaged/main/default/objects/Article_Search__c/fields/Clicked_Rank__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Rank__c</fullName>
    <description>1-based position of the clicked result in the returned list (1 = top result). Written by logClick. High average click rank on a query is a ranking-quality signal for later tuning phases.</description>
    <label>Clicked Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>