unpackaged/main/default/objects/Article_Search__c/fields/Normalized_Query__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Query__c</fullName>
    <description>The query after the search engine&#39;s own tokenizer runs (alphanumeric strip, lowercase, stopword + single-char drop), significant tokens space-joined. This is the tuning key — group gap reports on it, not the raw Term__c, so &quot;Reset Password?&quot; and &quot;reset password&quot; collapse together.</description>
    <label>Normalized Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>