unpackaged/main/default/objects/Article_Search__c/fields/Result_Count__c.field-meta.xml
<CustomField>
    <fullName>Result_Count__c</fullName>
    <description>Number of results returned. Capped at 50 by the search controller&#39;s MAX_RESULTS — fine for gap analysis (0 = knowledge gap).</description>
    <label>Result Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>