unpackaged/main/default/objects/Article_Search__c/fields/Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Type__c</fullName>
    <description>Which search path produced this row: Full (the scoring engine on submit), Typeahead (as-you-type suggestions), Fallback (pure-stopword title-phrase path), or Fuzzy (results came from the Levenshtein pass). Set by the caller; automatic Fallback/Fuzzy tagging is added when the engine surfaces its path.</description>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Typeahead</fullName>
            </value>
            <value>
                <fullName>Fallback</fullName>
            </value>
            <value>
                <fullName>Fuzzy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>