unpackaged/main/default/objects/Article_Search__c/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <description>Anonymous per-tab correlation key generated client-side (sessionStorage), used to stitch a search to the click(s) that followed it. NOT a user identifier and never derived from one — safe for guest sessions.</description>
    <label>Session Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>