unpackaged/main/default/objects/Article_Search__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <description>Where the search was run: &#39;Internal&#39; (core app) or the Experience Cloud network name.</description>
    <label>Surface</label>
    <length>80</length>
    <type>Text</type>
</CustomField>