unpackaged/main/default/objects/Article_Search__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The submitted search text, truncated to 255 characters server-side.</description>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>