unpackaged/main/default/objects/Article_Search__c/fields/Top_Result_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Result_Article_Id__c</fullName>
    <description>Knowledge__ka Id (version-stable across republishes) of the rank-1 result, or blank for a zero-result search. Stored as Text, not a lookup, so it survives republishing and matches Article_View__c.Article_Id__c for join-based click-through reports.</description>
    <label>Top Result Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>