unpackaged/main/default/objects/Article_Search__c/fields/Top_Result_Title__c.field-meta.xml
<CustomField>
    <fullName>Top_Result_Title__c</fullName>
    <description>Title snapshot of the rank-1 result at search time, denormalized server-side so reports read without joining back to Knowledge (titles can change on republish).</description>
    <label>Top Result Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>