unpackaged/main/default/objects/Article_Search__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Term__c</columns>
    <columns>Result_Count__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Surface__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>