unpackaged/main/default/objects/Article_Search__c/listViews/Zero_Result_Searches.listView-meta.xml
<ListView>
    <fullName>Zero_Result_Searches</fullName>
    <columns>NAME</columns>
    <columns>Term__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Surface__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result_Count__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Zero-Result Searches (Knowledge Gaps)</label>
</ListView>